@@ -1,3 +1,7 @@
+Sun Sep 24 06:12:42 2006 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>
+
+	* makebearoff.c: Fix typo: #include <sys/types.h>.
+
 Wed Sep 20 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gtkgame.c: Save full screen state and show pip count
